test/errors/error5.base
Invalid expression
fun foo() {
   _ = *1;
       ^
